Notification and Websocket and further modification and cleaning